# Xycar-ROS-Line-Tracer

./: CMakeLists.txt  README.md  package.xml
include/: xycar_lib.h
launch/: line_tracer.launch  xycar_drive.launch
src/: control_node.cpp  control_node.py  vision_node.cpp  vision_node.py
