<?xml version="1.0"?>
<package format="2">
  <name>mobility_line_tracer</name>
  <version>0.0.1</version>
  <description>Xycar ROS Autonomous Driving System (C++)</description>
  <maintainer email="seongu@skku.edu">Seongu An</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>ackermann_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>

</package>
